--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "firebase": "^11.2.0",
     "lucide-react": "^0.471.1",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-google-places-autocomplete": "^4.1.0",
     "react-icons": "^5.4.0",
