--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.5.2",
     "firebase": "^11.2.0",
     "lucide-react": "^0.471.1",
     "next-themes": "^0.4.4",
