--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-google-places-autocomplete": "^4.1.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
+    "react-select": "^5.10.0",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
